2010-04-02  Zoran Vasiljevic <vasiljevic@users.sourceforge.net>

	* generic/tclStringObj.c: (SetStringFromAny): avoid trampling
	over the tclEmptyStringRep->bytes as it is thread-shared
	(thx to Gustaf Neumann for the (hard) work of locating this one).

2010-03-31  Donal K. Fellows  <dkf@users.sf.net>

	* doc/package.n: [Bug 2980210]: Document the arguments taken by
	the [package present] command correctly.

2010-03-30  Andreas Kupries  <andreask@activestate.com>

	* generic/tclIORChan.c (ReflectClose, ReflectInput, ReflectOutput,
	ReflectSeekWide, ReflectWatch, ReflectBlock, ReflectSetOption,
	ReflectGetOption, ForwardProc): [Bug 2978773]: Preserve
	ReflectedChannel* structures across handler invokations, to avoid
	crashes when the handler implementation induces nested callbacks
	and destruction of the channel deep inside such a nesting.

2010-03-30  Don Porter  <dgp@users.sourceforge.net>

	* generic/tclObj.c (Tcl_GetCommandFromObj):	[Bug 2979402]: Reorder
	the validity tests on internal rep of a "cmdName" value to avoid
	invalid reads reported by valgrind.

2010-03-29  Don Porter  <dgp@users.sourceforge.net>

	* generic/tclStringObj.c:	Fix array overrun in test format-1.12
	caught by valgrind testing.

2010-03-25  Donal K. Fellows  <dkf@users.sf.net>

	* unix/tclUnixFCmd.c (TclUnixCopyFile): [Bug 2976504]: Corrected
	number of arguments to fstatfs() call.

2010-03-24  Don Porter  <dgp@users.sourceforge.net>

	* generic/tclResult.c:	[Bug 2383005]: Revise [return -errorcode] so
	* tests/result.test:	that it rejects illegal non-list values.

2010-03-20  Donal K. Fellows  <dkf@users.sf.net>

	* generic/tclIO.c (CopyData): Allow the total number of bytes copied
	by [fcopy] to exceed 2GB. Can happen when no -size parameter given.

2010-03-18  Don Porter  <dgp@users.sourceforge.net>

	* generic/tclListObj.c: [Bug 2971669]: Prevent in overflow trouble in
	* generic/tclTestObj.c: ListObjReplace operations.  Thanks to kbk for
	* tests/listObj.test:   fix and test.
